--- a/templates/index.html
+++ b/templates/index.html
@@ -265,7 +265,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Car Movement Tracker</h1>
+      <h1>Car Movement Generator</h1>
 
       <div class="status-panel">
         <h3>Service Status</h3>
