--- a/templates/index.html
+++ b/templates/index.html
@@ -266,6 +266,7 @@
   <body>
     <div class="container">
       <h1>Car Movement Generator</h1>
+      <h2>To LG Kafka</h2>
 
       <div class="status-panel">
         <h3>Service Status</h3>
